--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -34,6 +34,7 @@
 }
 
 .splash-main{
+  width: 100%;
   height: 630px;
   border-top: 5px solid green;
   border-bottom: 5px solid green;
@@ -94,4 +95,9 @@
 .signup-image{
   width: 75px;
   height: 75px;
+}
+
+// ALl the footer stuff
+#splash-page-footer-field{
+  border-top: 1px solid lightgrey;
 }
